# Optiplayer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-full.yml  build-installer.yml  build.yml
assets/fonts/: readme.txt
assets/themes/: debug.qss  default.qss  default.qss.backup
docs/: API.md  README.md
installer/: OptiPlayer.iss
scripts/: download_deps.sh  release.py
src/core/: CMakeLists.txt  decoder.cpp  decoder.h  player.cpp  player.h  player_stub.h  syncing.cpp  syncing.h
src/ui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
tests/: CMakeLists.txt  test_player.cpp
website/: index.html  render.yaml
